Fixed popup message being hidden by weather

--- a/src/components/ui/AcRemote.css
+++ b/src/components/ui/AcRemote.css
@@ -197,7 +197,7 @@
   font-size: 18px;
   font-weight: normal ;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
-  z-index: 1000;
+  
   animation: fadeInOut 3s ease-in-out;
 }
 
@@ -234,6 +234,14 @@
   margin-top: 30px;
   max-width: 80%;
   width: 300px;
+  
+}
+
+/* Confirmation Popup for Mobile */
+@media (max-width: 768px) {
+  .confirmation-popup {
+    top: 70%; /* Position near the bottom for mobile */
+  }
 }
 
 .confirmation-buttons {
